# Pixii_Project

./: .gitignore  README.md  aeo_local.db  docker-compose.yml  package-lock.json  package.json  railway.toml
.github/workflows/: ci.yml
apps/api/: .env.example  Dockerfile  Dockerfile.railway  pyproject.toml
apps/api/aeo_report_card_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/app/: main.py  models.py  persistence.py  schemas.py
apps/api/app/api/v1/: router.py
apps/api/app/api/v1/routes/: diagnostics.py
apps/api/app/core/: config.py  database.py
apps/api/app/services/: demo_mode.py  discovery.py  exporter.py  normalization.py  orchestrator.py  prompting.py  providers.py  scoring.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: test_diagnostics_api.py
apps/api/tests/unit/: test_normalization.py  test_scoring.py
apps/web/: Dockerfile  next.config.mjs  package.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/report/[runId]/: page.tsx
apps/web/components/: action-plan.tsx  input-wizard.tsx  provider-panel.tsx  rerun-form.tsx  scorecard.tsx  warnings.tsx
apps/web/lib/: api.ts  shared-types.ts  types.ts
apps/web/tests/: export-url.test.mjs
docs/: DEPLOYMENT.md  PROGRESS.md  VIDEO_SCRIPT.md
