[project]
name = "aeo-report-card-api"
version = "1.0.0"
description = "AEO Report Card API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<0.116.0",
  "uvicorn>=0.30.6,<0.31.0",
  "httpx>=0.27.2,<0.28.0",
  "pydantic-settings>=2.5.2,<3.0.0",
  "sqlalchemy>=2.0.35,<3.0.0",
  "psycopg[binary]>=3.2.3,<4.0.0",
  "alembic>=1.13.3,<2.0.0",
  "python-slugify>=8.0.4,<9.0.0",
  "beautifulsoup4>=4.12.3,<5.0.0",
  "fpdf2>=2.7.9,<3.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3,<9.0.0",
  "pytest-asyncio>=0.24.0,<0.25.0",
  "ruff>=0.7.0,<0.8.0",
  "mypy>=1.11.2,<2.0.0"
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "SIM", "C4"]
ignore = ["E501", "UP017", "B008"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = ["bs4", "bs4.*"]
ignore_missing_imports = true
